# quick-cmake

cmake/: library.cmake  tools.cmake
example/: CMakeLists.txt
example/coro/: CMakeLists.txt  config.h.in  demo_coro_asio.cpp  demo_coro_basics.cpp  demo_coro_callback_hell.cpp  demo_coro_concurrencpp.cpp  demo_coro_io_uring.cpp  demo_coro_sync_await.cpp  demo_coro_task_chain.cpp
example/opencv/: config.hpp  driver.hpp  road.hpp  vehicle.hpp
example/protobuf/: AddressBook.proto
include/skutils/coroutine/: coroutine.h  event_loop.h  generator.h  io_uring_async.h  sync_await.h  task.h
